<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".register.RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/sp_15"
            android:src="@drawable/email" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Please Insert Email"
            android:textSize="16dp"
            android:inputType="textEmailAddress"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/sp_15"
            android:src="@drawable/ic_person_black_24dp" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Please Insert Username"
            android:textSize="16dp"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/sp_15"
            android:src="@drawable/password" />


        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Please Insert Password"
            android:textSize="16dp"
            android:inputType="textPassword"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/sp_15"
            android:src="@drawable/phonenumber" />

        <EditText
            android:id="@+id/et_phonenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Please Insert Phonenumber"
            android:textSize="16dp"
            android:inputType="number"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/sp_15"
            android:src="@drawable/date" />

        <TextView
            android:id="@+id/tvPreviousSelectedDate"
            android:layout_width="152dp"
            android:layout_height="56dp"
            android:hint="Previous Donated Date"
            android:layout_marginLeft="10dp"
            android:textColor="#000"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnDate"
            android:layout_width="118dp"
            android:layout_height="56dp"
            android:text="@string/calendar"
            android:textStyle="bold"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/sp_15"
            android:src="@drawable/bloodgroup" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="147dp"
            android:layout_height="44dp"
            android:layout_marginLeft="10dp"
            android:text="Blood Group"
            android:textColor="#000"
            android:textSize="20dp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/blood_spinnner"
            android:layout_width="119dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp">

        </android.support.v7.widget.AppCompatSpinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/sp_15"
            android:src="@drawable/category"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="147dp"
            android:layout_height="44dp"
            android:layout_marginLeft="10dp"
            android:text="Category"
            android:textColor="#000"
            android:textSize="20dp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/category_spinner"
            android:layout_width="124dp"
            android:layout_height="match_parent"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp">

        </android.support.v7.widget.AppCompatSpinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/sp_15"
            android:src="@drawable/ic_location" />

        <TextView
            android:id="@+id/tvLat"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="Lat"
            android:textStyle="bold"
            android:textSize="16dp"
            android:gravity="center"
            android:layout_marginLeft="15dp"/>

        <TextView
            android:id="@+id/tvLon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="Lon"
            android:textStyle="bold"
            android:textSize="16dp"
            android:gravity="center"
            android:layout_marginLeft="10dp"/>

        <Button
            android:id="@+id/btnLocation"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/select_location"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="@dimen/sp_15"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/sp_15"
            android:src="@drawable/ic_person_outline_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:text="Gender"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="16dp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/gender_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginLeft="@dimen/dp_16"
            android:orientation="horizontal"
            android:title="@string/gender">

            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_8"
                android:layout_marginRight="@dimen/dp_8"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/gender_male"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="122dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/gender_female"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginTop="@dimen/dp_8"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvRegLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/login"
            android:textSize="@dimen/dp_16"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#000"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />




    </LinearLayout>








    </LinearLayout>